updated CV and research statement

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -125,13 +125,13 @@ Ann Arbor MI 48109-1107 \>
 
 \section*{Education}
 
-{\bf PhD in Statatistics} \hfill {\textit{2020-Present}}
+{\bf PhD in Statatistics} \hfill {\textit{2020--Present}}
 
 Univeristy of Michigan, Ann Arbor, MI.
 
 Thesis Advisor: Edward Ionides
 
-\noindent{\bf B.S. in Mathematics, Statistics, Minor in Computer Science } \hfill  {\textit{2016-2020}}
+\noindent{\bf B.S. in Mathematics, Statistics, Minor in Computer Science } \hfill  {\textit{2016--2020}}
 
 Utah State University (USU), Logan, UT.
 
@@ -140,16 +140,29 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 \section*{Research}
 \subsection*{Interests}
 \begin{interests}
-    \item Time Series Analysis via Mechanistic Models
+    \item Time Series Analysis
+    \item Mechanistic Models
     \item Computational Statistics
-    \item Reproducible and Robust Statistics
-    \item Applications in infectious disease modeling.
+    \item Infectious Disease Modeling
+    \item Reproducibility and Transparency in Statistics
+
 \end{interests}
+
+\subsection*{Working Papers}
+
+\begin{reflist}
+
+    \item Wheeler, J., Ionides, E. (2024). Likelihood Based Inference for ARMA models. {\it arXiv:2310.01198}.
+
+    % \item Yang, B., Wheeler, J., King, A., Duffy, M., Ionides, E. (2024) Mechanistic Models for Panel Data: Analysis of Ecological Experiments with Four Interacting Species.
+
+\end{reflist}
+
 \subsection*{Peer Reviewed Publications}
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it Accepted at PLoS Computational Biology}. \url{https://arxiv.org/abs/2301.08979}
+    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2024) Informing policy via dynamic models: Cholera in Haiti. {PLOS Computational Biology}, 20(4), e1012032.
 
     \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024) Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}.
 
@@ -167,24 +180,49 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Bayes Comp 2023, Satellite Event: Bayesian Inference of Epidemics, Levi, Finland}. \textbf{Upcoming, March 2023.}
+    \item \textbf{2024}\, Modelling and inference for pandemic preparedness. Isaac Newton Institute, Cambridge, England.
+    % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Modelling and inference for pandemic preparedness – a focussed workshop, Isaac Newton Institute, Cambridge, England}.
 
-    \item Wheeler, J., Rosengart, A., Jiang, J., Ionides, E. (2022). Eliminating Cholera in Haiti: Combining Dynamic Models with Data to Inform Vaccination Policy. Contributed Paper. {\it JSM 2020, Washington D.C.}.
+    \item \textbf{2024}\, Michigan Student Symposium for Interdisciplinary Statistical Sciences. Ann Arbor, MI.
+    % \item Wheeler, J., Ionides, E. (2024). arima2: An R package for Likelihood Based Inference for ARIMA Modeling. {\it MSSISS 2024, Ann Arbor, MI.}
 
-    \item Wheeler, J., Bean, B. (2020). Estimating Snow Water Equivalence Using Easily Obtainable Climate Variables. USU Student Research Symposium.
+    \item \textbf{2023}\, Bayes Comp 2023, Satellite Event: Bayesian Inference of Epidemics. Levi, Finland.
+    % \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Bayes Comp 2023, Satellite Event: Bayesian Inference of Epidemics, Levi, Finland}.
 
-    \item Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2020). Poster: GPS-Denied Navigation Using SAR Images and Neural Networks. {\it Utah Conference on Undergraduate Research, Logan, UT}.
+    \item \textbf{2023}\, Models of Infectious Disease Agent Study (MIDAS) Network Annual Meeting. Atlanta, GA.
 
-    \item Christensen, D., Villanueva, I., Wheeler, J., Vicioso, P., Husman, J., Lampkins, S., Youmans, K. (2019). Exploring Potential Relationships Between Self-Efficacy, Performance, and Electrodermal Activity in Engineering Exams. {\it American Educational Research Association.} April 5-9. Toronto, Canada.
+    \item \textbf{2022}\, JSM 2022. Washington D.C.
+    % \item Wheeler, J., Rosengart, A., Jiang, J., Ionides, E. (2022). Eliminating Cholera in Haiti: Combining Dynamic Models with Data to Inform Vaccination Policy. Contributed Paper. {\it JSM 2022, Washington D.C.}.
+
+     \item \textbf{2020}\, National Conference on Undergraduate Research. Online (COVID-19).
+
+    \item \textbf{2020}\, USU Student Research Symposium. Logan, UT.
+    % \item Wheeler, J., Bean, B. (2020). Estimating Snow Water Equivalence Using Easily Obtainable Climate Variables. USU Student Research Symposium.
+
+    \item \textbf{2020}\, Utah Conference on Undergraduate Research. Logan, UT.
+    % \item Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2020). Poster: GPS-Denied Navigation Using SAR Images and Neural Networks. {\it Utah Conference on Undergraduate Research, Logan, UT}.
+
+    % \item Christensen, D., Villanueva, I., Wheeler, J., Vicioso, P., Husman, J., Lampkins, S., Youmans, K. (2019). Exploring Potential Relationships Between Self-Efficacy, Performance, and Electrodermal Activity in Engineering Exams. {\it American Educational Research Association.} April 5-9. Toronto, Canada.
 
 \end{reflist}
 
 \subsection*{Awards}
 
+\noindent\hspace{5mm}\textbf{Best Oral Presentation}, MSSIS 2024, University of Michigan. \hfill {\textit{2024}}
+
+\hspace{5mm}{\it Award amount: $\$200$}
+
+
+\vspace{2mm}
+\noindent\hspace{5mm}\textbf{Rackham Graduate Student Research Grant}, University of Michigan \hfill {\textit{2024}}
+
+\hspace{5mm}{\it Award amount: $\$2500$}
+
+\vspace{2mm}
 \noindent\hspace{5mm}\textbf{Honorable Mention} NSF GRFP \hfill {\textit{2022}}
 
 \vspace{2mm}
-\noindent\hspace{5mm}\textbf{Rackham Merit Fellowship}, University of Michigan \hfill {\textit{2020-2025}}
+\noindent\hspace{5mm}\textbf{Rackham Merit Fellowship}, University of Michigan \hfill {\textit{2020--2025}}
 
 \vspace{2mm}
 \noindent\hspace{5mm}\textbf{Valedictorian}, USU College of Science \hfill {\textit{2020}}
@@ -192,17 +230,17 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 \vspace{2mm}
 \noindent\hspace{5mm}\textbf{URCO Grant}, USU \hfill  {\textit{2020}}
 
-\noindent\hspace{5mm}{\it Award amount: $\$1000$}
-
-\subsection*{Other}
-
+\hspace{5mm}{\it Award amount: $\$1000$}
 
 \section*{Teaching}
 
-\noindent \textbf{University of Michigan} \hfill  {\textit{2022-2023}}
+\noindent \textbf{University of Michigan} \hfill  {\textit{2020--Present}}
 
 \begin{teachinglsit}
-    \item Stats 306, {\it Lab Instructor} (Introduction to Statistical Computing)
+    \item \textbf{Stats 531}, {\it Office hours / Grading} \hfill (Modeling and Analysis of Time Series Data)
+    \item \textbf{Stats 604}, {\it Lab Instructor} \hfill (Statistical Practice)
+    \item \textbf{Summer Math Boot Camp} \hfill (Calculus, Linear Algebra, Probability, Computing)
+    \item \textbf{Stats 306}, {\it Lab Instructor} \hfill (Introduction to Statistical Computing)
 
     \item Tutor for masters level courses in probability and regression
 \end{teachinglsit}
@@ -211,7 +249,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 \noindent \textbf{SISMID (2022)}. Instructor for a short course on {\it Simulation based inference for Epidemiological Dynamics} at the Summer Institute in Statistics Modeling in Infectious Diseases (SISMID). University of Washington.
 
 \vspace{2mm}
-\noindent \textbf{Utah State University} \hfill  {\textit{2017-2020}}
+\noindent \textbf{Utah State University} \hfill  {\textit{2017--2020}}
 
 \begin{teachinglsit}
     \item Math 0995, {\it Recitation Leader} (Remedial Algebra)
@@ -220,9 +258,16 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
     \item Stats 1040, {\it Recitation Leader}, (Introductory Statistics, non-Calculus based)
 \end{teachinglsit}
 
-\subsection*{Mentoring}
+\noindent \textbf{Undergraduate Honors Thesis and Projects Mentored}
 
-\noindent\hspace{5mm}Undergraduate projects and thesis: Kevin Tan (2022), Noah Treutle (2022) and Bo Yang (Present).
+\begin{reflist}
+
+  \item Weizhe Sun. Model Based Inference of Stochastic Volatility via Iterated Filtering. Honors thesis, 2024.
+  \item Zuyuan Han. Signature Methods in Variance Swap Pricing. Honors thesis, 2023.
+  \item Bo Yang. Analysis of Panbel Data via Mechianistic Models in a PanelPOMP Framework. Honors thesis, 2023.
+  \item Kevin Tan and Noah Treutle. On the Transmissibility of Cholera During the 2010--2019 Haiti Cholera Epidemic. Research project, 2022.
+
+\end{reflist}
 
 \subsection*{Awards}
 
@@ -231,12 +276,24 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 \noindent\hspace{5mm}{\it USU Mathematics and Statistics Department}
 
 \section*{Service}
-\noindent \textbf{Computing Club Committee Member, UM Statistics Department} \hfill  {\textit{2022-Present}}
+
+\noindent \textbf{Computing Club Committee Member, UM Statistics Department} \hfill  {\textit{2022--Present}}
+\noindent \textbf{Committee Chair} \hfill {\it 2023--Present}
 
 \vspace{2mm}
-\noindent \textbf{Peer Review}: PLoS computation biology \hfill {\it 2021}
+\noindent \textbf{Peer Review}: PLoS computation biology, Nature Communications
 
 \vspace{2mm}
-\noindent \textbf{President, USU Data Science Club} \hfill  {\textit{2019-2020}}
+\noindent \textbf{President, USU Data Science Club} \hfill  {\textit{2019--2020}}
+
+\section*{Software}
+
+\noindent Author and maintainer for the R package \textbf{arima2}, available on CRAN.
+
+\vspace{2mm}
+\noindent Primary maintainer of the R package \textbf{panelPomp}, available on CRAN.
+
+\vspace{2mm}
+\noindent Contributor to open source R packages \textbf{pomp} and \textbf{spatPomp}, both available on CRAN.
 
 \end{document}
