--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -1,13 +1,15 @@
 @preamble{ " \newcommand{\noop}[1]{} " }
 
 @article{wheeler24,
-    author = {Wheeler, Jesse and Rosengart, AnnaElaine and Zhuoxun, Jiang and Tan, Kevin and Treutle, Noah and Ionides, Edward L.},
-    year = "2024",
-    title = {Informing Policy via Dynamic Models: Cholera in {H}aiti},
-    journal = {Accepted at PLoS Computational Biology},
-    doi = {arXiv:2301.08979},
-    priority = {1},
-    xworking = {Accepted}
+  title = {Informing policy via dynamic models: Cholera in Haiti},
+  author = {Wheeler, Jesse and Rosengart, AnnaElaine and Jiang, Zhuoxun and Tan, Kevin and Treutle, Noah and Ionides, Edward L},
+  journal = {PLOS Computational Biology},
+  volume = {20},
+  number = {4},
+  pages = {e1012032},
+  year = {2024},
+  publisher = {Public Library of Science San Francisco, CA USA},
+  priority = {1}
 }
 
 @article{wagstaff24,
@@ -22,21 +24,21 @@
   priority = {1}
 }
 
- @article{wheeler2023-a,
+ @article{wheelerARMA,
     author  = {Wheeler, Jesse and Ionides, Edward L.},
     year    = "2023",
     journal = "ArXiv preprint",
     title = {Likelihood Based Inference of {ARMA} Models},
-    doi = {arXiv.2310.01198}
+    doi = {arXiv.2310.01198},
     priority = {1}
 }
 
 @article{ionides22,
-  doi = {10.48550/ARXIV.2206.03837},
+  xdoi = {10.48550/ARXIV.2206.03837},
   xurl = {https://arxiv.org/abs/2206.03837},
   author = {Ionides, Edward L. and Ning, Ning and Wheeler, Jesse},
   title = {An Iterated Block Particle Filter for Inference on Coupled Dynamic Systems with Shared and Unit-Specific Parameters},
-  journal = {Statistica Sinica. pre-published online}
+  journal = {Statistica Sinica. pre-published online},
   xjournal = {Statistica Sinica},
   pages = {pre-published online},
   year = {2022},
