Minor edits to research statement, created teaching statement file

--- a/texDocs/researchStatement.tex
+++ b/texDocs/researchStatement.tex
@@ -4,7 +4,7 @@
 
 \title{Research Statement}
 \author{Jesse Wheeler}
-\date{February 2023}
+\date{\today}
 
 \begin{document}
 
@@ -31,7 +31,7 @@ This issue is particularly prevalent in nonlinear dynamic systems that are frequ
 
 A modern approach to modeling time-dependent observations is the use of state-space (or mechanistic) models \cite{durbin12}.
 These models involve proposing mathematical equations that describe how unobservable states of the system evolve over time and how measurements of the system variables are obtained.
-State-space models are appealing because they allow researchers to incorporate mechanisms that reflect our current scientific understanding of the system.
+State-space models are appealing because they allow researchers to incorporate mechanisms that reflect our current scientific understanding of the system in question.
 This capability enables researchers to estimate the effects of potential interventions on the system, provides a framework for statistical testing of our current understanding against alternative explanations, and facilitates inference on unobservable variables that may be of scientific interest.
 
 Despite the utility of these models, statistical inference of a dynamic system using state-space models remains a challenging task \cite{auger16}.
@@ -83,7 +83,7 @@ Likelihood maximization for auto regressive moving average (ARMA) models, for in
 % In this case, the state-space model is a convinient approach to fitting a model rather than being of direct interest itself.
 Despite the wide use of ARMA models across various scientific disciplines, current algorithms for maximum likelihood estimation of ARMA models have weaknesses that are not well known.
 In one of my working papers, I demonstrate how existing optimization strategies for ARMA models often result in parameter estimates corresponding to local---rather than global---maxima of the likelihood surface.
-To rectify this, I propose a random restart algorithm that frequently results in higher likelihoods than standard alternative \cite{wheelerARMA}.
+To rectify this, I propose a random restart algorithm that frequently results in higher likelihoods than standard alternatives \cite{wheelerARMA}.
 
 While my current research is focused on state-space modeling of dynamic systems, I am interested in many other statistical topics and am open to new research topics and collaborations.
 Some themes common to each of my research interests are transparency, reproducibility and simplicity.
