Updated teaching / reasearch statements

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -264,7 +264,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
   \item Weizhe Sun. Model Based Inference of Stochastic Volatility via Iterated Filtering. Honors thesis, 2024.
   \item Zuyuan Han. Signature Methods in Variance Swap Pricing. Honors thesis, 2023.
-  \item Bo Yang. Analysis of Panbel Data via Mechianistic Models in a PanelPOMP Framework. Honors thesis, 2023.
+  \item Bo Yang. Analysis of Panel Data via Mechianistic Models in a PanelPOMP Framework. Honors thesis, 2023.
   \item Kevin Tan and Noah Treutle. On the Transmissibility of Cholera During the 2010--2019 Haiti Cholera Epidemic. Research project, 2022.
 
 \end{reflist}
@@ -277,11 +277,11 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \section*{Service}
 
-\noindent \textbf{Computing Club Committee Member, UM Statistics Department} \hfill  {\textit{2022--Present}}
+\noindent \textbf{Computing Club Committee Member}, UM Statistics Department \hfill  {\textit{2022--Present}}
 \noindent \textbf{Committee Chair} \hfill {\it 2023--Present}
 
 \vspace{2mm}
-\noindent \textbf{Peer Review}: PLoS computation biology, Nature Communications
+\noindent \textbf{Peer Reviews}: PLoS computation biology, Nature Communications
 
 \vspace{2mm}
 \noindent \textbf{President, USU Data Science Club} \hfill  {\textit{2019--2020}}
