--- a/texDocs/researchStatement.tex
+++ b/texDocs/researchStatement.tex
@@ -37,7 +37,13 @@ This capability enables researchers to estimate the effects of potential interve
 Despite the utility of these models, statistical inference of a dynamic system using state-space models remains a challenging task \cite{auger16}.
 The primary goal of my current research is to expand the current state-of-the-art for state-space modeling.
 In particular, I develop methodology, theory, and software for likelihood based inference of state-space models with the {\it plug-and-play} property, which is that one only needs the ability to simulate from the model in order to perform inference \cite{breto09}.
-Algorithms with the plug-and-play property allow researchers to fit models that are scientifically accurate rather than those that are statistically convinient \cite{wheeler24}.
+Algorithms with the plug-and-play property enable researchers to fit models that align with their scientific objectives instead of being limited to those that are statistically convenient \cite{wheeler24}.
+
+This line of research frequently requires close collaboration with experts from pertinent scientific disciplines.
+For example, conducting a statistical analysis of an infectious disease outbreak relies heavily on expert opinion regarding the specific disease \cite{wheeler24}.
+A pertinent example from my ongoing projects is the investigation of population dynamics in freshwater Daphnia species.
+In this endeavor, I closely collaborate with colleagues in the Ecology department, leveraging their profound knowledge of Daphnia behavior.
+This collaboration has honed my skills as an effective statistical consultant in ecological research projects, a competency I look forward to further refine through future research collaborations.
 
 % An important outcome of this line of research is
 % State-space models are particularly useful in studying population Ecology.
@@ -48,7 +54,7 @@ The nonlinear, stochastic nature of many dynamic systems of scientific interest 
 Contemporary approaches that have been successfully used for nonlinear, low-dimensional systems are based on sequential Monte Carlo (SMC) techniques \cite{ionides06,andrieu10,ionides15}.
 As the dimensionality of the system increases, however, the approximation error of SMC increases exponentially \cite{bengtsson08,snyder08}.
 This necessitates the development of algorithms that can be used to perform inference on high-dimensional nonlinear state-space models.
-Recent progress in this area has been made (for instance, \cite{ionides22,wheeler24}), yet several open problems remain.
+Recent progress in this area has been made---including my own research projects \cite{ionides22,wheeler24}---yet several open problems remain.
 Furthermore, existing plug-and-play algorithms used to model these systems are computationally expensive, making any improvements in computational speed a desireable outcome.
 % Recent research by my research group have enabled some progress in this area \cite{ionides22}.
 
