--- a/texDocs/teachingStatement.tex
+++ b/texDocs/teachingStatement.tex
@@ -1,6 +1,9 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{geometry}
+\usepackage[table]{xcolor}
+\newcommand\TODO[1]{\textcolor{red}{[TODO: #1]}}
+
 
 \title{Teaching Statement}
 \author{Jesse Wheeler}
@@ -25,17 +28,44 @@
 \vspace{4mm}
 
 % \noindent Dynamic systems are the subject of many ecological and financial studies.
-\noindent My really cool teaching statement
 
-\begin{itemize}
-  \item Stats 306 with Mark vs Jonathan.
-  \item Meaningful project based.
-  \item Connect teaching with real-world examples.
-  \item Connect teaching with recent research publications.
-  \item Statistics teaching: emphasize critical evaluation of results
-  \item Teaching methodology: provide suitable motivation for techniques we are learning, such as why, when, how?
-  \item Important teaching to diverse backgrounds and experiences.
-\end{itemize}
+\noindent Thoughout my academic career I have seen many differing approaches to teaching, from both the perspective of a student and from the perspective of an instructor.
+These experiences have all shaped my teaching philosophy in differeing ways, yet all have reaffirmed the importance of the teaching duty of an academic.
+Effective instructors have the potential to completely transform a students life for the better, as several professors did for me when I was a student.
+As such, developing skills of an effective instructor is a responsibility I take very seriously.
+
+Effective teaching extends far beyond merely presenting raw material to students.
+As an educator, I believe that students learn most effectively when they can connect theoretical ideas to real-world problems.
+An effective way to do this is to find recent published articles that are related to course topics to use as motivating examples or discussion points.
+By presenting historic backgrounds and the motivations behind certain concepts, I can enrich students' learning experiences and help them grasp the broader significance of the subject matter.
+
+Recognizing that each student comes from a unique background and brings diverse experiences to the classroom, I strive to present material in various ways to accommodate different learning styles.
+Adaptability in teaching is crucial; what works well for one student may not resonate with another.
+Therefore, I employ multiple teaching strategies to ensure effective engagement with the material for all students.
+Additionally, I have seen firsthand how adapting future lessons based on frequent assessments—such as homework, quizzes, and tests—can enhance learning outcomes.
+For instance, revisiting challenging topics before progressing ensures a solid understanding of the current material.
+
+In my teaching experience, I have observed that well-crafted homework assignments significantly enhance learning outcomes without causing undue stress.
+For example, I taught a lab course for the same undergraduate statistics course for two semesters, each time supervised by different faculty members.
+One professor assigned long and technically challenging homework assignments each week, presumably with the idea that students would eventually benefit from struggling through difficult problems on their own.
+The other instructor, however, typically designed guided homework assignments that presented difficult ideas in a progressive and educational way.
+Students that were exposed to the thoughtfully crafted homework assignments not only were less stressed thoughout the semester, but they could also clearly demonstrate a better understanding of course materials at the end of the semester.
+
+Statistics methodology and theory can often appear abstract and challenging, especially for students whose primary discipline is not statistics.
+Example-based learning can make abstract concepts more relatable.
+For instance, I use specific datasets to illustrate the relevance and application of the topics I teach, demonstrating both the necessity of particular theories or methodologies and their practical use.
+Student-led projects further bridge the gap between theory and practice; well-designed projects and assignments encourage students to engage with the material more meaningfully, promoting critical thinking and practical application of course concepts.
+Through project-based learning, students can delve deeper into subjects, collaborate with peers, and develop essential skills for their future careers.
+
+The advent of generative AI, such as ChatGPT, presents both opportunities and challenges in teaching statistics.
+These tools are transforming how students work and learn, necessitating adaptation by effective instructors.
+Rather than ignoring AI, it is important to teach students how to use these tools responsibly and effectively in both research and learning contexts.
+For example, in the Stats 531 course I instructed at the University of Michigan, ChatGPT was permitted as long as students could demonstrate their engagement beyond merely copying answers.
+They were required to explain their learning process and application of knowledge, encouraging active and thoughtful interaction with the material.
+While AI tools can be beneficial, it is crucial for educators to evolve their teaching methods to prevent students from relying solely on AI-generated answers.
+
+In conclusion, my teaching philosophy revolves around creating a dynamic and inclusive learning environment that caters to the diverse needs of students.
+Through the integration of real-world examples, adaptive teaching methods, thoughtfully designed assignments, project-based learning, and the judicious use of generative AI, I aim to foster a deep and meaningful understanding of statistics among my students.
 
 \bibliography{myWorks.bib,otherWorks.bib}
 \bibliographystyle{ieeetr}
